fixed navlink spacing and hamburger menu

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,11 +1,13 @@
 
 #home-page{
+    margin-top: auto;
 
     text-align: center;
     padding: 2rem;
    
 }
 .custom-img {
+    margin-top: 1rem;
     height: 100vh;
     object-fit: cover;
   }
